--- a/samtemplate.yaml
+++ b/samtemplate.yaml
@@ -7,7 +7,7 @@ Resources:
     Properties:
       Handler: index.handler
       Runtime: nodejs6.10
-      CodeUri: s3://raja-sam-test
+      CodeUri: s3://raja-sam-test/
       Events:
         MyTimeApi:
           Type: Api
